eclipse-workspace/Surya Dev Org/src/objects/All_Scheduled_Jobs__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Age</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>All Scheduled Jobs</relationshipLabel>
        <relationshipName>All_Scheduled_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Next_Scheduled_Run__c</fullName>
        <label>Next Scheduled Run</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Scheduled_Date__c</fullName>
        <label>Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Started__c</fullName>
        <label>Started</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Submitted_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submitted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>All_Scheduled_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Submitted__c</fullName>
        <label>Submitted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled Apex</fullName>
                </value>
                <value>
                    <fullName>Batch Apex</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>All Scheduled Jobs</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Scheduled_Date__c</columns>
        <columns>Submitted_By__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>All Scheduled Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>